# langbrew

./: .gitignore  CLAUDE.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_user_settings_language_device_usage.py  0002_rename_name_to_first_name.py  0003_create_passages_vocabulary_tables.py  0004_add_dictionary_tables.py  0005_create_conversation_tables.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  redis.py
backend/app/jobs/: feedback.py
backend/app/middleware/: rate_limit.py  usage_meter.py
backend/app/models/: __init__.py  base.py  conversation.py  conversation_feedback.py  conversation_partner.py  device_token.py  dictionary.py  enums.py  message.py  passage.py  passage_vocabulary.py  review_event.py  session_review.py  study_session.py  usage_meter.py  user.py  user_language.py  user_settings.py  user_streak.py  vocabulary.py
backend/app/routers/: flashcards.py  health.py  home.py  me.py  passages.py  talk.py  vocabulary.py
backend/app/schemas/: account.py  common.py  device_token.py  flashcard.py  home.py  passage.py  talk.py  usage.py  user.py  user_language.py  user_settings.py  vocabulary.py
backend/app/scripts/: import_dictionary.py
backend/app/services/: account_service.py  (+9 more)
backend/data/: .gitignore
backend/supabase/: config.toml
backend/tests/: conftest.py  test_account_deletion.py  test_flashcard_service.py  test_health.py  test_home.py  test_me.py  test_passages.py  test_talk.py  test_vocabulary.py
(+110 files in other folders)
